--- a/src/html/_contacts.html
+++ b/src/html/_contacts.html
@@ -1,31 +1,28 @@
-<section class="contacts" style="background-image: url('./images/contacts.jpg');">
+<section class="contacts">
 
-  <div class="contacts__inner">
+  <div class="container">
 
-    <div class="container">
+    <h2>
+      Get in Touch with Us
+    </h2>
 
-      <h2>
-        Contact Us
-      </h2>
+    <div class="contacts__inner">
+      <p>
+        Reach out to us and learn more about our luxurious Antarctic expeditions. Our team is ready to assist you with
+        planning your ultimate adventure.
+      </p>
 
       <form class="contacts__form">
-
-        <label for="userName">
-          <input type="text" placeholder="Enter your name" id="userName" required />
-        </label>
-
+   
         <label for="userEmail">
-          <input type="email" placeholder="Enter your email address" id="userEmail" required />
+          <input type="email" placeholder="your email" id="useremail" required />
         </label>
-
-        <label for="userMessage">
-          <textarea placeholder="Your message..." id="userMessage" required></textarea>
-        </label>
-
-        <button class="btn" type="submit">Book a Tour</button>
+    
+        <button class="btn" type="submit">submit</button>
       </form>
-
     </div>
+
+
 
   </div>
 
