--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <nav class="nav">
       <a class="logo" href="index.html">
-        <img class="logo__img" src="./images/logo.svg" alt="logo of antarctic luxurytravels" width="268" height="32"
+        <img class="logo__img" src="./images/logo.svg" alt="logo of Antarcticluxury expedition" width="280" height="48"
           loading="lazy" />
       </a>
 
@@ -20,7 +20,7 @@
           </li>
 
           <li class="nav__item">
-            <a class="nav__link {{ page === 'about' }}" href="about.html">
+            <a class="nav__link {{ page === 'about' }}" href="#">
               About Us
             </a>
           </li>
@@ -50,7 +50,7 @@
           </a>
 
           <button class="btn btn--request" type="button" formsappId="664b4b5b033ee153da4f91a3">
-            Book a Tour
+            Book a trip
           </button>
         </div>
       </div>
