--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,34 +1,13 @@
 <footer class="footer">
-  <div class="container">
-    <nav class="nav nav--footer">
 
-      <div class="nav__block">
-        <a href="mailto:contact@antarcticaluxurytravels.com">
-          contact@antarcticaluxurytravels.com</a>
-
-        <a class="logo" href="index.html">
-          <img class="logo__img" src="./images/logo_footer.svg" alt="logo of antarctica luxurytravels" width="204"
-            height="29" loading="lazy" />
-        </a>
-      </div>
-      <div class="nav__btns">
-        <a class="btn" href="sign-up.html">
-          Sign In
-        </a>
-
-        <button class="btn btn--request" type="button" formsappId="664b4b5b033ee153da4f91a3">
-          Book a Tour
-        </button>
-      </div>
-    </nav>
+  <div class="footer__image">
+    <img src="./images/footer.png" alt="Luxury Polar Adventure" width="1440" height="143" loading="lazy" />
   </div>
-
-  <div class="footer__bottom">
 
     <div class="container">
       <div class="footer__copy">
-        <p>Antarctica LuxuryTravels © 2024. All Rights Reserved</p>
-
+      <a href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>
+      
         <ul class="footer__policy">
           <li>
             <a href="privacy-policy.html">
@@ -43,12 +22,11 @@
           </li>
         </ul>
       </div>
-    </div>
   </div>
 
 </footer>
 
 <script src="https://forms.app/static/embed.js" type="text/javascript" async defer
   onload="new formsapp('664b4b5b033ee153da4f91a3', 'popup',
-  {'overlay':'rgba(45,45,45,0.5)','button':{'text':'Book a Tour'},'width':'800px','height':'600px','openingAnimation':{'entrance':'animate__fadeIn','exit':'animate__fadeOut'}});">
+  {'overlay':'rgba(45,45,45,0.5)','button':{'text':'Book a trip'},'width':'800px','height':'600px','openingAnimation':{'entrance':'animate__fadeIn','exit':'animate__fadeOut'}});">
 </script>
