--- a/src/html/home/_hero.html
+++ b/src/html/home/_hero.html
@@ -2,47 +2,21 @@
 
   <div class="hero__inner">
 
-    <div class="wrapper">
+    <div class="container">
 
       <div class="hero__content">
 
         <h1>
           antarctica
         </h1>
-
-        <h2 class="sr-only">
-          antarctica
-        </h2>
-
-        <p>
-          Embark on the Journey of a Lifetime: Discover the Majestic Beauty of Antarctica with Our Expert-Led Tours
+ 
+        <p class="subtext">
+         Our exclusive expeditions offer unparalleled comfort and breathtaking experiences in the world’s last frontier.
         </p>
-
-        <button class="btn btn--request" type="button" formsappId="664b4b5b033ee153da4f91a3">
-          Book a Tour
-        </button>
-
+   
       </div>
 
-      <div class="hero__images">
-
-
-        <div class="hero__image">
-          <h3>
-            Classic Antarctic Expedition
-          </h3>
-          <img src="./images/hero/penguin.png" alt="images of penguin" width="310" height="488" loading="lazy" />
-        </div>
-
-        <div class="hero__image">
-
-          <h3>
-            Antarctic Adventure Cruise
-          </h3>
-          <img src="./images/hero/iceberg.png" alt="images of iceberg" width="265" height="275" loading="lazy" />
-        </div>
-      </div>
-
+   
     </div>
 
   </div>
