--- a/src/html/travel/_hero.html
+++ b/src/html/travel/_hero.html
@@ -2,7 +2,7 @@
 
   <div class="hero__inner">
 
-    <div class="wrapper">
+    <div class="container">
 
       <div class="hero__content">
 
@@ -11,13 +11,10 @@
         </h1>
 
         <p>
-         Essential Tips and Guidelines for a Seamless Antarctic Adventure
+         Prepare for your Antarctic adventure with our detailed guides. Discover visa requirements, health tips, packing
+         lists, and the best times to visit for a seamless journey."
         </p>
-
-       <button class="btn btn--request" type="button" formsappId="664b4b5b033ee153da4f91a3">
-         Book a Tour
-       </button>
-
+   
       </div>
 
     </div>
