--- a/src/html/travel/_travel.html
+++ b/src/html/travel/_travel.html
@@ -1,12 +1,31 @@
-<section class="travel section">
+<section class="travel">
+
+  <h2>
+    you need to know
+  </h2>
 
   <div class="container">
 
     <ul class="travel__list">
 
       <li>
-        <h2 class="title">Health and Safety Tips</h2>
-        <p class="subtext">
+        <h3>
+          Visa and Entry Requirements
+        </h3>
+        <p>
+          Traveling to Antarctica typically doesn't require a visa for the continent itself, but you may need visas for
+          countries en route, such as Chile or Argentina. You'll need specific permits to land in Antarctica, which are
+          usually handled by tour operators. For more details, refer to the official government websites of these
+          gateway
+          countries. Be sure to apply well in advance, as processing times can vary.
+        </p>
+      </li>
+
+      <li>
+        <h3>
+          Health and Safety Tips
+        </h3>
+        <p>
           Ensure you're well-prepared for your Antarctic journey with the right vaccinations and comprehensive medical
           insurance, including emergency evacuation coverage. Be aware of the extreme cold and follow guidelines to stay
           warm and hydrated. Familiarize yourself with emergency procedures, and always heed your guides' safety
@@ -15,8 +34,11 @@
       </li>
 
       <li>
-        <h2 class="title">Packing List</h2>
-        <p class="subtext">
+        <h3>
+          Packing List
+        </h3>
+
+        <p>
           Pack essential items like thermal layers, waterproof outerwear, and sturdy, insulated boots for the harsh
           Antarctic climate. Bring personal items such as sunscreen, lip balm, and any medications. For photography
           enthusiasts, waterproof camera equipment and binoculars are a must to capture the stunning landscapes and
@@ -25,8 +47,11 @@
       </li>
 
       <li>
-        <h2 class="title">Weather and Climate</h2>
-        <p class="subtext">
+        <h3>
+          Weather and Climate
+        </h3>
+
+        <p>
           Antarctica experiences extreme weather conditions with average summer temperatures ranging from -2°C to 8°C.
           Winter can be much harsher. Daylight varies dramatically, with continuous daylight in summer and near-total
           darkness in winter. The best time to visit is during the Antarctic summer (November to March), ideal for
@@ -35,8 +60,10 @@
       </li>
 
       <li>
-        <h2 class="title">Transportation Options</h2>
-        <p class="subtext">
+        <h3>
+          Transportation Options
+        </h3>
+        <p>
           Travel to Antarctica is primarily via cruise ships or expedition vessels, departing from ports in South
           America, Australia, or New Zealand. These ships are equipped to navigate icy waters safely. Consider the
           duration, cost, and comfort level of different vessels when choosing your transportation. Flights are limited
@@ -45,8 +72,11 @@
       </li>
 
       <li>
-        <h2 class="title">Accommodations</h2>
-        <p class="subtext">
+        <h3>
+          Accommodations
+        </h3>
+
+        <p>
           Accommodations in Antarctica range from comfortable cabins on expedition ships to more rugged options like
           camping. Expedition ships provide modern amenities and communal dining areas. Research stations offer basic
           facilities for scientific staff, sometimes available for tourists. Choose based on your comfort preferences
@@ -55,15 +85,19 @@
       </li>
 
       <li>
-        <h2 class="title">Wildlife and Nature</h2>
-        <p class="subtext">
+        <h3>
+          Wildlife and Nature
+        </h3>
+
+        <p>
           Antarctica is home to unique wildlife, including various species of penguins, seals, whales, and seabirds. The
           continent’s pristine landscapes feature stunning ice formations and rugged terrain. Practice responsible
           wildlife viewing by keeping a respectful distance and minimizing environmental impact to preserve this
           delicate ecosystem for future generations.
         </p>
       </li>
-      </ul>
+
+    </ul>
 
   </div>
 
