--- a/src/about.html
+++ b/src/about.html
@@ -11,15 +11,13 @@
 
       <include src="./html/about/_hero.html"></include>
 
-      <include src="./html/about/_expedition.html"></include>
+      <include src="./html/about/_about.html"></include>
 
-      <include src="./html/about/_reviews.html"></include>
+      <include src="./html/about/_team.html"></include>
 
-      <include src="./html/about/_exellence.html"></include>
+      <include src="./html/about/_projects.html"></include>
 
-      <include src="./html/about/_exploration.html"></include>
-
-      <include src="./html/about/_crafting.html"></include>
+      <include src="./html/about/_addtional.html"></include>
 
       <include src="./html/about/_faq.html"></include>
 
