--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,5 +1,5 @@
 <header class="{{header}}">
-  <div class="wrapper">
+  <div class="container">
     <nav class="nav">
       <a class="logo" href="index.html">
         <img class="logo__img" src="./images/logo.svg" alt="logo of Antarcticluxury expedition" width="280" height="48"
@@ -20,7 +20,7 @@
           </li>
 
           <li class="nav__item">
-            <a class="nav__link {{ page === 'about' }}" href="#">
+            <a class="nav__link {{ page === 'about' }}" href="about.html">
               About Us
             </a>
           </li>
@@ -45,7 +45,7 @@
         </ul>
 
         <div class="nav__btns">
-          <a class="btn" href="sign-up.html">
+          <a class="btn btn--sign " href="sign-up.html">
             Sign In
           </a>
 
