--- a/src/html/about/_faq.html
+++ b/src/html/about/_faq.html
@@ -3,7 +3,7 @@
   <div class="container">
 
     <h2>
-      Frequently Asked Questions: Your Queries Answered
+      faq
     </h2>
 
     <ul class="faq__list">
@@ -16,9 +16,7 @@
           <div>
             <p>
               Our tour prices include accommodations, meals, guided excursions, and all necessary equipment.
-              International
-              flights,
-              travel insurance, and personal expenses are not included.
+              International flights, travel insurance, and personal expenses are not included.
             </p>
           </div>
         </details>
@@ -57,6 +55,6 @@
         </details>
       </li>
     </ul>
-    
+
   </div>
 </section>
