--- a/src/html/home/_about.html
+++ b/src/html/home/_about.html
@@ -1,44 +1,135 @@
-<section class="about">
+<section class="about about--home">
 
-  <div class="about__inner">
+  <div class="container">
 
-    <div class="about__desc">
-      <p class="subtext">
-        As you join our expeditions, you'll be amazed by the luxury and comfort aboard. The refined design and premium
-        materials
-        create an atmosphere of elegance. The panoramic windows offer stunning views of the Antarctic, blending the
-        grandeur of
-        nature with top-tier amenities.
-      </p>
-    </div>
+    <div class="about__inner">
 
-    <div class="about__image">
-      <img src="./images/home/about.png" alt="about company" width="650" height="837" loading="lazy" />
+      <div class="about__desc">
+        <p class="subtext subtext--second">
+          As you join our expeditions, you'll be amazed by the luxury and comfort aboard. The refined design and premium
+          materials
+          create an atmosphere of elegance. The panoramic windows offer stunning views of the Antarctic, blending the
+          grandeur of
+          nature with top-tier amenities.
+        </p>
+      </div>
 
-      <div class="about__content">
-        <div class="about__title">
+      <div class="about__image">
+        <img src="./images/home/about.png" alt="about company" width="650" height="837" loading="lazy" />
+
+        <div class="about__content">
+          <div class="about__title">
+            <span>
+              committed
+              to sustainability
+            </span>
+
+            <h2>
+              about company
+            </h2>
+          </div>
+
           <p>
-            committed
-            to sustainability
+            Located in Antarctica’s pristine beauty, our expeditions offer a unique luxury experience. Eco-friendly
+            practices and
+            elegant design make it the ideal getaway from urban life, blending adventure with sustainability.
           </p>
 
-          <h2>
-            about
-            company
-          </h2>
         </div>
 
-        <p>
-          Located in Antarctica’s pristine beauty, our expeditions offer a unique luxury experience. Eco-friendly
-          practices and
-          elegant design make it the ideal getaway from urban life, blending adventure with sustainability.
-        </p>
+      </div>
 
+
+    </div>
+
+  </div>
+
+  <section class="discover">
+
+    <div class="container">
+
+      <ul class="discover__list">
+
+        <li class="discover__item overlay overlay--gray">
+          <img src="./images/discover/majestic.jpg" alt="Majestic Antarctic Voyage" width="427" height="494"
+            loading="lazy" />
+          <h3>
+            Majestic Antarctic Voyage
+          </h3>
+
+          <div class="discover__link">
+
+            <div class="discover__content">
+              <span>
+                Majestic
+              </span>
+
+              <p>
+                Ultimate journey.
+              </p>
+            </div>
+
+            <a href="#">Booking</a>
+
+          </div>
+        </li>
+
+        <li class="discover__item overlay overlay--gray">
+          <img src="./images/discover/luxury.jpg" alt="Luxury Polar Adventure" width="427" height="494"
+            loading="lazy" />
+          <h3>
+            Luxury Polar Adventure
+          </h3>
+          <div class="discover__link">
+
+            <div class="discover__content">
+              <span>
+                Luxurious
+              </span>
+
+              <p>
+                Elegant escape.
+              </p>
+            </div>
+
+            <a href="#">Booking</a>
+
+          </div>
+        </li>
+
+        <li class="discover__item overlay overlay--gray">
+          <img src="./images/discover/exclusive.jpg" alt="Exclusive Wildlife Expedition" width="427" height="494"
+            loading="lazy" />
+          <h3>
+            Exclusive Wildlife Expedition
+          </h3>
+
+          <div class="discover__link">
+            <div class="discover__content">
+              <span>
+                Wildlife
+              </span>
+
+              <p>
+                Wildlife tour.
+              </p>
+            </div>
+
+            <a href="#">Booking</a>
+          </div>
+        </li>
+
+      </ul>
+
+      <div class="discover__image overlay overlay--gray">
+        <img src="./images/discover/discover.jpg" alt="Exclusive Wildlife Expedition" width="1320" height="280"
+          loading="lazy" />
+
+        <a href="#">Discover more</a>
       </div>
 
     </div>
 
-
-  </div>
+  </section>
 
 </section>
