--- a/src/html/home/_discover.html
+++ b/src/html/home/_discover.html
@@ -1,15 +1,16 @@
-<section class="discover section">
+<!-- <section class="discover section">
 
   <div class="container">
 
     <ul class="discover__list">
 
-      <li class="discover__item">
-        <img src="./images/discover/majesctic.jpg" alt="Majestic Antarctic Voyage" width="427" height="494"
+      <li class="discover__item overlay overlay--gray">
+        <img src="./images/discover/majestic.jpg" alt="Majestic Antarctic Voyage" width="427" height="494"
           loading="lazy" />
         <h3>
           Majestic Antarctic Voyage
         </h3>
+
         <div class="discover__link">
 
           <div class="discover__content">
@@ -17,9 +18,9 @@
               Majestic
             </span>
 
-            <h3>
+            <p>
               Ultimate journey.
-            </h3>
+            </p>
           </div>
 
           <a href="#">Booking</a>
@@ -27,7 +28,7 @@
         </div>
       </li>
 
-      <li class="discover__item">
+      <li class="discover__item overlay overlay--gray">
         <img src="./images/discover/luxury.jpg" alt="Luxury Polar Adventure" width="427" height="494" loading="lazy" />
         <h3>
           Luxury Polar Adventure
@@ -39,9 +40,9 @@
               Luxurious
             </span>
 
-            <h3>
-              Exclusive Wildlife Expedition
-            </h3>
+            <p>
+              Elegant escape.
+            </p>
           </div>
 
           <a href="#">Booking</a>
@@ -49,7 +50,7 @@
         </div>
       </li>
 
-      <li class="discover__item">
+      <li class="discover__item overlay overlay--gray">
         <img src="./images/discover/exclusive.jpg" alt="Exclusive Wildlife Expedition" width="427" height="494"
           loading="lazy" />
         <h3>
@@ -62,24 +63,24 @@
               Wildlife
             </span>
 
-            <h3>
+            <p>
               Wildlife tour.
-            </h3>
+            </p>
           </div>
 
           <a href="#">Booking</a>
         </div>
       </li>
 
-      <div class="discover__image">
-        <img src="./images/discover/discover.jpg" alt="Exclusive Wildlife Expedition" width="1320" height="280"
-          loading="lazy" />
-
-     <a href="#">Discover more</a>
-      </div>
-
     </ul>
+
+    <div class="discover__image overlay overlay--gray">
+      <img src="./images/discover/discover.jpg" alt="Exclusive Wildlife Expedition" width="1320" height="280"
+        loading="lazy" />
+
+      <a href="#">Discover more</a>
+    </div>
 
   </div>
 
-</section>
+</section> -->
