--- a/src/html/home/_hero.html
+++ b/src/html/home/_hero.html
@@ -1,4 +1,4 @@
-<section class="hero hero--home" style="background-image: url('./images/hero/home.jpg');">
+<section class="hero hero--home overlay" style="background-image: url('./images/hero/home.jpg');">
 
   <div class="hero__inner">
 
@@ -9,14 +9,14 @@
         <h1>
           antarctica
         </h1>
- 
+
         <p class="subtext">
          Our exclusive expeditions offer unparalleled comfort and breathtaking experiences in the world’s last frontier.
         </p>
-   
+
       </div>
 
-   
+
     </div>
 
   </div>
