--- a/src/html/tours/_adventages.html
+++ b/src/html/tours/_adventages.html
@@ -1,4 +1,4 @@
-<section class="adventages background">
+<!-- <section class="adventages background">
 
   <div class="container">
 
@@ -46,4 +46,4 @@
     </ul>
   </div>
 
-</section>
+</section> -->
