--- a/src/html/tours/_jorney.html
+++ b/src/html/tours/_jorney.html
@@ -1,4 +1,4 @@
-<section class="journey background background--light">
+<!-- <section class="journey background background--light">
 
   <div class="container">
     <h2>
@@ -26,4 +26,4 @@
 
   </div>
 
-</section>
+</section> -->
