--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,7 @@
 
       <include src="./html/home/_hero.html"></include>
 
-      <include src="./html/home/_featured.html"></include>
-
-      <include src="./html/home/_adventure.html"></include>
-
-      <include src="./html/home/_experience.html"></include>
-
-      <include src="./html/home/_works.html"></include>
-
-      <include src="./html/home/_explore.html"></include>
+      <include src="./html/home/_about.html"></include>
 
       <include src="./html/_contacts.html"></include>
 
