--- a/src/articles.html
+++ b/src/articles.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "Articles"}'></include>
 
@@ -141,4 +141,4 @@
   </div>
 </body>
 
-</html>
+</html> -->
