--- a/src/html/about/_hero.html
+++ b/src/html/about/_hero.html
@@ -1,8 +1,8 @@
-<section class="hero" style="background-image: url('./images/hero/about.jpg');">
+<section class="hero overlay" style="background-image: url('./images/hero/about.jpg');">
 
   <div class="hero__inner">
 
-    <div class="wrapper">
+    <div class="container">
 
       <div class="hero__content">
 
@@ -10,14 +10,18 @@
           about us
         </h1>
 
-        <p>
-          Dedicated to Crafting Unforgettable and Sustainable Antarctic Experiences
+        <p class="subtext">
+          Our expert-led tours provide unmatched luxury and unforgettable adventures in the pristine wilderness of
+          Antarctica.
         </p>
 
-        <button class="btn btn--request" type="button" formsappId="664b4b5b033ee153da4f91a3">
-          Book a Tour
-        </button>
 
+      </div>
+
+      <div class="hero__bottom">
+        <p>
+          inspired by passion to explore and protect antarctica
+        </p>
       </div>
 
     </div>
