--- a/src/html/tours/_island.html
+++ b/src/html/tours/_island.html
@@ -1,12 +1,12 @@
-<section class="tours overlay" style="background-image: url('./images/tours/sea.jpg')">
+<section class="tours tours--reverse" style="background-image: url('./images/tours/island.jpg')">
   <div class="tours__inner">
     <div class="container">
       <div class="tours__content">
-        <h2>Weddell Sea</h2>
+        <h2>Deception Island</h2>
 
-        <p class="subtext">
-         Navigate the icy waters of the Weddell Sea, known for its majestic icebergs, abundant marine life, and serene
-         beauty.
+        <p>
+          Explore the volcanic landscapes of Deception Island, a unique destination with geothermal activity and rich
+          history.
         </p>
 
         <button class="btn btn--request" type="button" formsappId="664b4b5b033ee153da4f91a3">
