--- a/src/sound.html
+++ b/src/sound.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "The Sounds of Silence"}'></include>
 
@@ -113,4 +113,4 @@
   </div>
 </body>
 
-</html>
+</html> -->
