--- a/src/html/_contacts.html
+++ b/src/html/_contacts.html
@@ -7,7 +7,7 @@
     </h2>
 
     <div class="contacts__inner">
-      <p>
+      <p class="subtext">
         Reach out to us and learn more about our luxurious Antarctic expeditions. Our team is ready to assist you with
         planning your ultimate adventure.
       </p>
