--- a/src/html/tours/_island.html
+++ b/src/html/tours/_island.html
@@ -4,7 +4,7 @@
       <div class="tours__content">
         <h2>Deception Island</h2>
 
-        <p>
+        <p class="subtext">
           Explore the volcanic landscapes of Deception Island, a unique destination with geothermal activity and rich
           history.
         </p>
