--- a/src/html/tours/_perfect.html
+++ b/src/html/tours/_perfect.html
@@ -1,22 +1,21 @@
-<section class="additional additional--white reverse">
+<section class="additional additional--reverse">
 
   <div class="additional__wrapper">
 
     <div class="additional__content">
       <h2>
-       Discover Your Perfect Antarctic Adventure
+      Customization options
       </h2>
 
-      <p>
-        Our diverse range of Antarctic tours offers something for every explorer. Whether you're seeking thrilling
-        adventures, intimate wildlife encounters, or breathtaking photography opportunities, we have the perfect
-        itinerary for you. Join us to experience the awe-inspiring beauty and unique wonders of the world's last great
-        wilderness.
+      <p class="subtext">
+        Tailor your Antarctic adventure to suit your interests and preferences. Whether you seek thrilling activities,
+        serene landscapes, or in-depth wildlife explorations, our team will work with you to create a personalized
+        itinerary. Enjoy a bespoke experience that matches your unique travel desires.
       </p>
     </div>
 
     <div class="additional__image">
-      <img src="./images/additional/iceberg.jpg" alt="Discover Your Perfect Antarctic Adventure" width="615" height="530"
+      <img src="./images/additional/boat.jpg" alt=" Customization options" width="630" height="579"
         loading="lazy" />
     </div>
 
