--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,14 @@
 
       <include src="./html/home/_about.html"></include>
 
+      <include src="./html/home/_discover.html"></include>
+
+      <include src="./html/home/_choose.html"></include>
+
+      <include src="./html/home/_blog.html"></include>
+
+      <include src="./html/home/_gallery.html"></include>
+
       <include src="./html/_contacts.html"></include>
 
     </main>
