--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -6,7 +6,7 @@
 
     <div class="container">
       <div class="footer__copy">
-      <a href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>
+      <a class="footer__link" href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>
       
         <ul class="footer__policy">
           <li>
