--- a/src/html/home/_blog.html
+++ b/src/html/home/_blog.html
@@ -9,36 +9,31 @@
 
     <ul class="blog__list">
 
-      <li class="blog__item">
+      <li class="blog__item overlay overlay--gray">
         <img src="./images/blog/penguin.png" alt="10 Must-See Wildlife Encounters in Antarctica" width="455"
           height="557" loading="lazy" />
-
-        <div class="blog__desc">
+      
           <h3>
             10 Must-See Wildlife Encounters in Antarctica
           </h3>
-        </div>
 
         <a href="#"></a>
       </li>
 
-      <li class="blog__item">
+      <li class="blog__item overlay overlay--gray">
         <img src="./images/blog/iceberg.png" alt="Exploring the Historic Sites of the Antarctic Peninsula" width="455"
           height="557" loading="lazy" />
 
-        <div class="blog__desc">
           <h3>
            Exploring the Historic Sites of the Antarctic Peninsula
           </h3>
-        </div>
         <a href="#"></a>
       </li>
+    </ul>
 
-      <p>
+      <p class="subtext">
         From breathtaking wildlife encounters to the latest in sustainable travel practices, our blog covers everything
         you need to know for your Antarctic adventure. Explore expert guides, travel tips, and inspiring stories.
       </p>
-
-    </ul>
   </div>
 </section>
