--- a/src/html/home/_choose.html
+++ b/src/html/home/_choose.html
@@ -7,33 +7,44 @@
 
     <ul class="choose__list">
 
-      <li>
-        <h3>
-          Expert Guides
-        </h3>
-        <p>
-          Our team of experienced guides ensures a safe and informative journey through Antarctica’s unique landscapes.
-        </p>
+      <li class="choose__item">
+
+        <div class="choose__desc">
+          <h3>
+            Expert Guides
+          </h3>
+          <p>
+            Our team of experienced guides ensures a safe and informative journey through Antarctica’s unique
+            landscapes.
+          </p>
+        </div>
       </li>
 
-      <li>
-        <h3>
-          Sustainable Practices
-        </h3>
-        <p>
-          We prioritize eco-friendly and sustainable practices to minimize our environmental impact and preserve
-          Antarctica’s pristine beauty.
-        </p>
+      <li class="choose__item">
+
+        <div class="choose__desc">
+          <h3>
+            Sustainable Practices
+          </h3>
+          <p>
+            We prioritize eco-friendly and sustainable practices to minimize our environmental impact and preserve
+            Antarctica’s pristine beauty.
+          </p>
+        </div>
       </li>
 
-      <li>
-        <h3>
-         Luxury Accommodations
-        </h3>
-        <p>
-          Enjoy top-tier comfort with our premium accommodations, designed to provide the best in luxury amidst the icy
-          wilderness.
-        </p>
+      <li class="choose__item">
+
+        <div class="choose__desc">
+          <h3>
+            Luxury Accommodations
+          </h3>
+          <p>
+            Enjoy top-tier comfort with our premium accommodations, designed to provide the best in luxury amidst the
+            icy
+            wilderness.
+          </p>
+        </div>
       </li>
 
     </ul>
