--- a/src/html/tours/_hero.html
+++ b/src/html/tours/_hero.html
@@ -1,8 +1,8 @@
-<section class="hero" style="background-image: url('./images/hero/tours.jpg');">
+<section class="hero overlay" style="background-image: url('./images/hero/tours.jpg');">
 
   <div class="hero__inner">
 
-    <div class="wrapper">
+    <div class="container">
 
       <div class="hero__content">
 
@@ -10,13 +10,16 @@
           tours & destinations
         </h1>
 
-        <p>
-          Explore the Best of Antarctica: Tailored Tours to Uncover the Continent's Hidden Wonders
+        <p class="subtext">
+          Explore our luxury tours and discover breathtaking landscapes, abundant wildlife, and the serene beauty of
+          Antarctica’s pristine wilderness.
         </p>
 
-       <button class="btn btn--request" type="button" formsappId="664b4b5b033ee153da4f91a3">
-         Book a Tour
-       </button>
+        <div class="hero__bottom">
+          <p>
+            experience luxury journeys through antarctica’s pristine wilderness
+          </p>
+        </div>
 
       </div>
 
