--- a/src/tours.html
+++ b/src/tours.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "Tours"}'></include>
 
@@ -11,21 +11,19 @@
 
       <include src="./html/tours/_hero.html"></include>
 
-      <include src="./html/tours/_perfect.html"></include>
-
-      <include src="./html/tours/_adventages.html"></include>
+      <include src="./html/tours/_discover.html"></include>
 
       <include src="./html/tours/_tours.html"></include>
 
-      <include src="./html/tours/_antartic.html"></include>
+      <include src="./html/tours/_lemair.html"></include>
 
-      <include src="./html/tours/_sea.html"></include>
+      <include src="./html/tours/_island.html"></include>
 
-      <include src="./html/tours/_featured.html"></include>
+      <include src="./html/tours/_perfect.html"></include>
 
-      <include src="./html/tours/_transparent.html"></include>
+      <include src="./html/tours/_pricing.html"></include>
 
-      <include src="./html/tours/_jorney.html"></include>
+      <include src="./html/tours/_reviews.html"></include>
 
       <include src="./html/_contacts.html"></include>
 
@@ -36,4 +34,4 @@
   </div>
 </body>
 
-</html> -->
+</html>
