--- a/src/html/home/_hero.html
+++ b/src/html/home/_hero.html
@@ -1,4 +1,4 @@
-<section class="hero hero--home overlay" style="background-image: url('./images/hero/home.jpg');">
+<section class="hero hero--home overlay">
 
   <div class="hero__inner">
 
