--- a/src/html/tours/_island.html
+++ b/src/html/tours/_island.html
@@ -1,4 +1,4 @@
-<section class="tours tours--reverse" style="background-image: url('./images/tours/island.jpg')">
+<section class="tours" style="background-image: url('./images/tours/island.jpg')">
   <div class="tours__inner">
     <div class="container">
       <div class="tours__content">
