--- a/src/html/travel/_hero.html
+++ b/src/html/travel/_hero.html
@@ -1,4 +1,4 @@
-<section class="hero" style="background-image: url('./images/hero/travel.jpg');">
+<section class="hero overlay" style="background-image: url('./images/hero/travel.jpg');">
 
   <div class="hero__inner">
 
@@ -10,7 +10,7 @@
          travel information
         </h1>
 
-        <p>
+        <p class="subtext">
          Prepare for your Antarctic adventure with our detailed guides. Discover visa requirements, health tips, packing
          lists, and the best times to visit for a seamless journey."
         </p>
