--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "Home"}'></include>
 
-<body class="page__body">
+<body class="page__body page__body--decor overlay"
+  style="background-image: url('./images/hero/home.jpg')">
   <div class="site-container">
     <include src="./html/_header.html" locals='{"page": "home",
   "header": "header"}'></include>
