--- a/src/html/about/_hero.html
+++ b/src/html/about/_hero.html
@@ -1,30 +1,14 @@
-<section class="hero overlay" style="background-image: url('./images/hero/about.jpg');">
-
+<section class="hero">
   <div class="hero__inner">
-
     <div class="container">
-
       <div class="hero__content">
-
-        <h1>
-          about us
-        </h1>
+        <h1>about us</h1>
 
         <p class="subtext">
-          Our expert-led tours provide unmatched luxury and unforgettable adventures in the pristine wilderness of
-          Antarctica.
+          Our expert-led tours provide unmatched luxury and unforgettable
+          adventures in the pristine wilderness of Antarctica.
         </p>
-
-        <div class="hero__bottom">
-          <p>
-            inspired by passion to explore and protect antarctica
-          </p>
-        </div>
-
       </div>
-
     </div>
-
   </div>
-
 </section>
