--- a/src/wildlife.html
+++ b/src/wildlife.html
@@ -1,40 +1,36 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "10 Must-See Wildlife Encounters in Antarctica"}'></include>
 
-<body class="page__body">
+<body class="page__body page__body--decor overlay articles"
+  style=" background-image: url('./images/hero/wildlife.jpg')">
   <div class="site-container">
     <include src="./html/_header.html" locals='{"page": "", "header": "header"}'></include>
 
     <main class="main">
-      <section class="hero hero--news overlay" style="background-image: url('./images/hero/wildlife.jpg')">
+      <section class="hero hero--articles">
         <div class="hero__inner">
-          <div class="conatiner">
+          <div class="container">
             <a class="btn btn--arrow" href="articles.html">Back</a>
 
             <div class="hero__content">
               <h1>10 Must-See Wildlife Encounters in Antarctica</h1>
 
-              <p>Antarctica is a land of extremes and home to some of the most unique wildlife on the planet. Here are
-                ten must-see wildlife encounters that should be on every adventurer's list.</p>
             </div>
           </div>
         </div>
       </section>
 
-      <article class="blog ">
+      <article class="articles">
         <div class="container">
-          <p class="blog__content">
-            One of the most profound experiences in Antarctica is the
-            overwhelming sense of silence and tranquility. This article
-            explores the unique auditory landscape of the icy continent.
-          </p>
+          <ul class="articles__list">
 
-          <ul class="blog__list">
             <li>
-              <h3>
-                Emperor Penguins
-              </h3>
+              Antarctica is a land of extremes and home to some of the most unique wildlife on the planet. Here are ten
+              must-see wildlife encounters that should be on every adventurer's list.
+            </li>
+            <li>
+              <h2>Emperor Penguins</h2>
               <p>
                 Emperor penguins are the tallest and heaviest of all living penguin species. Their colonies are located
                 in some of the most remote and harsh environments on Earth. Visiting these colonies, particularly during
@@ -44,9 +40,7 @@
             </li>
 
             <li>
-              <h3>
-                Humpback Whales
-              </h3>
+              <h2>Humpback Whales</h2>
               <p>
                 These gentle giants migrate to Antarctic waters during the summer to feed on krill. Humpback whales are
                 known for their acrobatic breaches and complex songs, making whale-watching tours a thrilling
@@ -56,9 +50,7 @@
             </li>
 
             <li>
-              <h3>
-               Leopard Seals
-              </h3>
+              <h2>Leopard Seals</h2>
               <p>
                 Leopard seals are the apex predators of the Antarctic ecosystem. Known for their powerful jaws and
                 hunting skills, they primarily prey on penguins and other seals. Observing a leopard seal in action,
@@ -67,10 +59,7 @@
             </li>
 
             <li>
-              <h3>
-                Adelie Penguins
-              </h3>
-
+              <h2>Adelie Penguins</h2>
               <p>
                 Adelie penguins are smaller than emperor penguins but no less interesting. They are often seen in large,
                 noisy colonies along the Antarctic coast. Watching their playful behavior and observing their
@@ -79,10 +68,7 @@
             </li>
 
             <li>
-              <h3>
-                Orcas (Killer Whales)
-              </h3>
-
+              <h2>Orcas (Killer Whales)</h2>
               <p>
                 Orcas, or killer whales, are highly intelligent and social marine mammals. They can be seen hunting in
                 packs, displaying intricate and cooperative hunting techniques. Seeing an orca pod in the wild,
@@ -91,9 +77,7 @@
             </li>
 
             <li>
-              <h3>
-                Weddell Seals
-              </h3>
+              <h2>Weddell Seals</h2>
               <p>
                 Weddell seals are known for their calm demeanor and can often be found lounging on ice floes. They are
                 well-adapted to the cold and can dive to great depths to hunt for fish. Observing Weddell seals in their
@@ -102,20 +86,17 @@
             </li>
 
             <li>
-              <h3>
-                Albatrosses
-              </h3>
+              <h2>Albatrosses</h2>
               <p>
                 Albatrosses are known for their impressive wingspans and ability to glide effortlessly over the ocean
-                for hours. These majestic birds are a common sight in the Southern Ocean. Birdwatchers will be thrilled
-                to observe their graceful flight and nesting behaviors.
+                for
+                hours. These majestic birds are a common sight in the Southern Ocean. Birdwatchers will be thrilled to
+                observe their graceful flight and nesting behaviors.
               </p>
             </li>
 
             <li>
-              <h3>
-                Crabeater Seals
-              </h3>
+              <h2>Crabeater Seals</h2>
               <p>
                 Despite their name, crabeater seals primarily feed on krill. They are the most populous seal species in
                 Antarctica. Watching crabeater seals navigate through the ice or interact with each other is a
@@ -124,9 +105,7 @@
             </li>
 
             <li>
-              <h3>
-                King Penguins
-              </h3>
+              <h2>King Penguins</h2>
               <p>
                 While more common on sub-Antarctic islands, king penguins are a striking species to encounter. Their
                 vibrant plumage and distinctive behaviors make them a favorite among wildlife photographers and
@@ -135,19 +114,15 @@
             </li>
 
             <li>
-              <h3>
-                Antarctic Petrels
-              </h3>
-
+              <h2>Antarctic Petrels</h2>
               <p>
                 These seabirds are known for their striking black and white plumage and are often seen skimming the
                 ocean’s surface. Observing their flight patterns and feeding behaviors adds another dimension to the
-                rich tapestry of Antarctic wildlife.
+                rich
+                tapestry of Antarctic wildlife.
               </p>
             </li>
           </ul>
-
-
         </div>
       </article>
 
@@ -155,7 +130,7 @@
     </main>
 
     <include src="./html/_footer.html"></include>
-  </div>
+    </div>
 </body>
 
-</html> -->
+</html>
