--- a/src/about.html
+++ b/src/about.html
@@ -2,7 +2,7 @@
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "About"}'></include>
 
-<body class="page__body">
+<body class="page__body page__body--decor overlay" style=" background-image: url('./images/hero/about.jpg');">
   <div class="site-container">
     <include src="./html/_header.html" locals='{"page": "about", "header": "header"
   }'></include>
@@ -10,6 +10,8 @@
     <main class="main">
 
       <include src="./html/about/_hero.html"></include>
+
+      <include src="./html/about/_transparent.html"></include>
 
       <include src="./html/about/_about.html"></include>
 
