--- a/src/articles.html
+++ b/src/articles.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "Articles"}'></include>
 
@@ -9,121 +9,55 @@
 
     <main class="main main--top">
 
-      <section class="works works--main section">
+      <section class="blog blog--main ">
 
         <div class="container">
 
           <h2>
-            Insights, Stories, and Travel Tips
+            blogs
           </h2>
 
-          <ul class="works__list">
-            <li class="works__item">
-              <img src="./images/home/works/marine.jpg" alt="Antarctica's Marine Life: Whales, Seals, and Albatrosses"
-                width="588" height="330" loading="lazy" />
+          <ul class="blog__list">
 
-              <div class="works__desc">
-                <h3>
-                  Antarctica's Marine Life: Whales, Seals, and Albatrosses
-                </h3>
+            <li class="blog__item overlay overlay--gray">
+              <img src="./images/blog/penguin.png" alt="10 Must-See Wildlife Encounters in Antarctica" width="455"
+                height="557" loading="lazy" />
 
-                <p>
-                  Discover the diverse marine life of Antarctica, including majestic whales, playful seals, and soaring
-                  albatrosses, and learn about their unique behaviors and habitats.
-                </p>
+              <h3>
+                10 Must-See Wildlife Encounters in Antarctica
+              </h3>
 
-                <a class="btn" href="marine-life.html">Learn More</a>
-              </div>
+              <a href="wildlife.html"></a>
             </li>
 
-            <li class="works__item">
-              <img src="./images/home/works/aurora.jpg"
-                alt="Behind the Lens: Photographing the Aurora Australis in Antarctica" width="588" height="330"
-                loading="lazy" />
+            <li class="blog__item overlay overlay--gray">
+              <img src="./images/blog/iceberg.png" alt="Exploring the Historic Sites of the Antarctic Peninsula"
+                width="455" height="557" loading="lazy" />
 
-              <div class="works__desc">
-                <h3>
-                  Behind the Lens: Photographing the Aurora Australis in Antarctica
-                </h3>
-
-                <p>
-                  Get tips and techniques for capturing the mesmerizing Aurora Australis. This guide is perfect for
-                  photographers seeking to immortalize the stunning southern lights.
-                </p>
-
-                <a class="btn" href="aurora.html">Learn More</a>
-              </div>
+              <h3>
+                Exploring the Historic Sites of the Antarctic Peninsula
+              </h3>
+              <a href="antartic.html"></a>
             </li>
 
-            <li class="works__item">
-              <img src="./images/hero/cusine.jpg" alt="Antarctic Cuisine" width="588" height="330" loading="lazy" />
+            <li class="blog__item overlay overlay--gray">
+              <img src="./images/hero/capturing.jpg" alt="A Photographer's Guide to Capturing the Beauty of Antarctica"
+                width="455" height="557" loading="lazy" />
 
-              <div class="works__desc">
-                <h3>
-                  Antarctic Cuisine
-                </h3>
-
-                <p>
-                  Dining in Antarctica is a unique and memorable experience. Despite the remote and harsh conditions,
-                  the culinary offerings can be surprisingly diverse and delicious. This article delves into the
-                  culinary aspects of Antarctic expeditions.
-                </p>
-
-                <a class="btn" href="antartic-cuisine.html">Learn More</a>
-              </div>
+              <h3>
+                A Photographer's Guide to Capturing the Beauty of Antarctica
+              </h3>
+              <a href="capturing.html"></a>
             </li>
 
-            <li class="works__item">
-              <img src="./images/hero/sound.jpg" alt="The Sounds of Silence" width="588" height="330" loading="lazy" />
+            <li class="blog__item overlay overlay--gray">
+              <img src="./images/hero/packing.jpg" alt="The Ultimate Packing List for Your Antarctic Expedition"
+                width="455" height="557" loading="lazy" />
 
-              <div class="works__desc">
-                <h3>
-                  The Sounds of Silence
-                </h3>
-
-                <p>
-                  One of the most profound experiences in Antarctica is the overwhelming sense of silence and
-                  tranquility. This article explores the unique auditory landscape of the icy continent.
-                </p>
-
-                <a class="btn" href="#">Learn More</a>
-              </div>
-            </li>
-
-            <li class="works__item">
-              <img src="./images/hero/climate.jpg" alt="Climate Change in Antarctica" width="588" height="330"
-                loading="lazy" />
-
-              <div class="works__desc">
-                <h3>
-                  Climate Change in Antarctica
-                </h3>
-
-                <p>
-                  Antarctica is both a victim of and a vital indicator for global climate change. This article examines
-                  the impacts of climate change on the continent and the efforts being made to mitigate these effects.
-                </p>
-
-                <a class="btn" href="climate.html">Learn More</a>
-              </div>
-            </li>
-
-            <li class="works__item">
-              <img src="./images/hero/navigatin.jpg" alt="Navigating Antarctic Waters" width="588" height="330"
-                loading="lazy" />
-
-              <div class="works__desc">
-                <h3>
-                 Navigating Antarctic Waters
-                </h3>
-
-                <p>
-                  Antarctica’s vast coastline is dotted with wildlife-rich areas and secluded spots waiting to be
-                  explored. This article guides you through the most captivating locations.
-                </p>
-
-                <a class="btn" href="navigating.html">Learn More</a>
-              </div>
+              <h3>
+                The Ultimate Packing List for Your Antarctic Expedition
+              </h3>
+              <a href="packing.html"></a>
             </li>
           </ul>
 
@@ -141,4 +75,4 @@
   </div>
 </body>
 
-</html> -->
+</html>
