--- a/src/capturing.html
+++ b/src/capturing.html
@@ -1,156 +1,127 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "A Photographer`s Guide to Capturing the Beauty of Antarctica"}'>
 </include>
 
-<body class="page__body">
+<body class="page__body page__body--decor articles overlay"
+  style="background-image: url('./images/hero/capturing.jpg')">
   <div class="site-container">
     <include src="./html/_header.html" locals='{"page": "", "header": "header"}'></include>
 
     <main class="main">
-      <section class="hero hero--news overlay" style="background-image: url('./images/hero/capturing.jpg')">
+      <section class="hero hero--articles">
         <div class="hero__inner">
-          <div class="conatiner">
+          <div class="container">
             <a class="btn btn--arrow" href="articles.html">Back</a>
 
             <div class="hero__content">
-
               <h1>
                 A Photographer's Guide to Capturing the Beauty of Antarctica
               </h1>
-
-              <p>Antarctica is a land of extremes and home to some of the most unique wildlife on the planet. Here are
-                ten must-see wildlife encounters that should be on every adventurer's list.</p>
             </div>
           </div>
         </div>
       </section>
 
-      <article class="blog ">
+      <article class="articles">
         <div class="container">
-          <p class="blog__content">
-            One of the most profound experiences in Antarctica is the
-            overwhelming sense of silence and tranquility. This article
-            explores the unique auditory landscape of the icy continent.
-          </p>
 
-          <ul class="blog__list">
+
+          <ul class="articles__list">
+
             <li>
-              <h3>
-                Emperor Penguins
-              </h3>
+              Antarctica is a land of extremes and home to some of the most unique wildlife on the planet. Here are ten
+              must-see wildlife encounters that should be on every adventurer's list.
+            </li>
+
+            <li>
+              <h2>Best Times to Shoot</h2>
               <p>
-                Emperor penguins are the tallest and heaviest of all living penguin species. Their colonies are located
-                in some of the most remote and harsh environments on Earth. Visiting these colonies, particularly during
-                breeding season, offers an unforgettable experience. Observing their intricate social behaviors and
-                hearing their unique vocalizations are highlights for any wildlife enthusiast.
+                Early morning and late evening light offers the best conditions for capturing stunning landscapes and
+                wildlife. The low angle of the sun during these times creates dramatic shadows and highlights, adding
+                depth and dimension to your photos. Be prepared to shoot during these golden hours for the best results.
               </p>
             </li>
 
             <li>
-              <h3>
-                Humpback Whales
-              </h3>
+              <h2>Composition Tips</h2>
               <p>
-                These gentle giants migrate to Antarctic waters during the summer to feed on krill. Humpback whales are
-                known for their acrobatic breaches and complex songs, making whale-watching tours a thrilling
-                experience.
-                Spotting these magnificent creatures in their natural habitat is a moment to cherish.
+                Use the rule of thirds, leading lines, and natural frames to enhance your compositions. In Antarctica,
+                the
+                vast landscapes and stark contrasts provide excellent opportunities for creative framing. Experiment
+                with
+                different angles and perspectives to capture the unique beauty of the region.
               </p>
             </li>
 
             <li>
-              <h3>
-               Leopard Seals
-              </h3>
+              <h2>Wildlife Photography</h2>
               <p>
-                Leopard seals are the apex predators of the Antarctic ecosystem. Known for their powerful jaws and
-                hunting skills, they primarily prey on penguins and other seals. Observing a leopard seal in action,
-                whether hunting or lounging on an ice floe, is a fascinating sight.
+                Patience is key. Keep a safe distance and use a telephoto lens to capture intimate shots of wildlife.
+                Always respect the animals and avoid disturbing their natural behaviors. Pay attention to the light and
+                background to ensure your wildlife photos are both sharp and compelling.
               </p>
             </li>
 
             <li>
-              <h3>
-                Adelie Penguins
-              </h3>
-
+              <h2>Capturing Landscapes</h2>
               <p>
-                Adelie penguins are smaller than emperor penguins but no less interesting. They are often seen in large,
-                noisy colonies along the Antarctic coast. Watching their playful behavior and observing their
-                interactions within the colony provides a delightful and engaging experience.
+                Utilize wide-angle lenses to capture the vastness of Antarctic landscapes. Focus on the play of light
+                and
+                shadow on ice formations. Look for interesting foreground elements to add depth to your photos. The
+                pristine environment offers endless opportunities for stunning landscape photography.
               </p>
             </li>
 
             <li>
-              <h3>
-                Orcas (Killer Whales)
-              </h3>
-
+              <h2>Dealing with Cold</h2>
               <p>
-                Orcas, or killer whales, are highly intelligent and social marine mammals. They can be seen hunting in
-                packs, displaying intricate and cooperative hunting techniques. Seeing an orca pod in the wild,
-                particularly when they are on the hunt, is a breathtaking experience.
+                Protect your gear from extreme cold and condensation. Use weatherproof covers and keep batteries warm.
+                Carry spare batteries close to your body to prevent them from losing power quickly. Be mindful of the
+                cold's impact on your equipment and handle it with care.
               </p>
             </li>
 
             <li>
-              <h3>
-                Weddell Seals
-              </h3>
+              <h2>Post-Processing</h2>
               <p>
-                Weddell seals are known for their calm demeanor and can often be found lounging on ice floes. They are
-                well-adapted to the cold and can dive to great depths to hunt for fish. Observing Weddell seals in their
-                natural habitat provides a glimpse into their unique adaptations and behaviors.
+                Enhance your photos with editing software to adjust exposure, contrast, and color balance, bringing out
+                the best in your shots. Use post-processing to correct any imperfections and highlight the unique
+                features
+                of your images. Be subtle with edits to maintain the natural beauty of your photos.
               </p>
             </li>
 
             <li>
-              <h3>
-                Albatrosses
-              </h3>
+              <h2>Unique Perspectives</h2>
               <p>
-                Albatrosses are known for their impressive wingspans and ability to glide effortlessly over the ocean
-                for hours. These majestic birds are a common sight in the Southern Ocean. Birdwatchers will be thrilled
-                to observe their graceful flight and nesting behaviors.
+                Experiment with different angles and perspectives to capture the unique beauty of Antarctica. Try
+                shooting
+                from low angles to emphasize the scale of icebergs and mountains. Aerial shots from drones can provide a
+                bird’s-eye view of the landscape, offering a fresh perspective.
               </p>
             </li>
 
             <li>
-              <h3>
-                Crabeater Seals
-              </h3>
+              <h2>Respecting Nature</h2>
               <p>
-                Despite their name, crabeater seals primarily feed on krill. They are the most populous seal species in
-                Antarctica. Watching crabeater seals navigate through the ice or interact with each other is a
-                fascinating addition to any wildlife expedition.
+                Always follow guidelines for wildlife and environmental conservation to minimize your impact while
+                photographing. Be aware of your surroundings and avoid stepping on fragile vegetation or disturbing
+                wildlife habitats. Your respect for the environment will ensure its preservation for future generations.
               </p>
             </li>
 
             <li>
-              <h3>
-                King Penguins
-              </h3>
+              <h2>Storytelling</h2>
               <p>
-                While more common on sub-Antarctic islands, king penguins are a striking species to encounter. Their
-                vibrant plumage and distinctive behaviors make them a favorite among wildlife photographers and
-                enthusiasts alike.
+                Think about the story you want to tell with your photos. Capture a mix of wide shots, close-ups, and
+                detailed images to create a compelling narrative. Consider the emotions and experiences you want to
+                convey
+                through your photography, and plan your shots accordingly.
               </p>
             </li>
 
-            <li>
-              <h3>
-                Antarctic Petrels
-              </h3>
-
-              <p>
-                These seabirds are known for their striking black and white plumage and are often seen skimming the
-                ocean’s surface. Observing their flight patterns and feeding behaviors adds another dimension to the
-                rich tapestry of Antarctic wildlife.
-              </p>
-            </li>
           </ul>
-
 
         </div>
       </article>
@@ -162,4 +133,4 @@
   </div>
 </body>
 
-</html> -->
+</html>
