--- a/src/html/home/_blog.html
+++ b/src/html/home/_blog.html
@@ -1,4 +1,4 @@
-<section class="blog">
+<section class="blog section">
   <div class="container">
     <h2>
       <span>
@@ -12,7 +12,7 @@
       <li class="blog__item overlay overlay--gray">
         <img src="./images/blog/penguin.png" alt="10 Must-See Wildlife Encounters in Antarctica" width="455"
           height="557" loading="lazy" />
-      
+
           <h3>
             10 Must-See Wildlife Encounters in Antarctica
           </h3>
