--- a/src/html/tours/_hero.html
+++ b/src/html/tours/_hero.html
@@ -1,30 +1,15 @@
-<section class="hero overlay" style="background-image: url('./images/hero/tours.jpg');">
-
+<section class="hero hero--double">
   <div class="hero__inner">
-
     <div class="container">
-
       <div class="hero__content">
-
-        <h1>
-          tours & destinations
-        </h1>
+        <h1>tours & destinations</h1>
 
         <p class="subtext">
-          Explore our luxury tours and discover breathtaking landscapes, abundant wildlife, and the serene beauty of
-          Antarctica’s pristine wilderness.
+          Explore our luxury tours and discover breathtaking landscapes,
+          abundant wildlife, and the serene beauty of Antarctica’s pristine
+          wilderness.
         </p>
-
-        <div class="hero__bottom">
-          <p>
-            experience luxury journeys through antarctica’s pristine wilderness
-          </p>
-        </div>
-
       </div>
-
     </div>
-
   </div>
-
 </section>
