--- a/src/html/tours/_lemair.html
+++ b/src/html/tours/_lemair.html
@@ -7,11 +7,11 @@
           Channel
         </h2>
 
-        <p>
+        <p class="subtext">
           Cruise through the stunning Lemaire Channel, often referred to as “Kodak Gap,” with its towering cliffs and
           tranquil waters.
         </p>
-        
+
         <button class="btn btn--request" type="button" formsappId="664b4b5b033ee153da4f91a3">
           book a trip
         </button>
