--- a/src/html/travel/_hero.html
+++ b/src/html/travel/_hero.html
@@ -1,4 +1,4 @@
-<section class="hero overlay" style="background-image: url('./images/hero/travel.jpg');">
+<section class="hero hero--double">
 
   <div class="hero__inner">
 
@@ -14,7 +14,7 @@
          Prepare for your Antarctic adventure with our detailed guides. Discover visa requirements, health tips, packing
          lists, and the best times to visit for a seamless journey."
         </p>
-   
+
       </div>
 
     </div>
