--- a/src/tours.html
+++ b/src/tours.html
@@ -2,7 +2,7 @@
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "Tours"}'></include>
 
-<body class="page__body">
+<body class="page__body page__body--decor overlay" style=" background-image: url('./images/hero/tours.jpg');">
   <div class="site-container">
     <include src="./html/_header.html" locals='{"page": "tours",
   "header": "header"}'></include>
@@ -10,6 +10,8 @@
     <main class="main">
 
       <include src="./html/tours/_hero.html"></include>
+
+      <include src="./html/tours/_transparent.html"></include>
 
       <include src="./html/tours/_discover.html"></include>
 
