--- a/src/travel.html
+++ b/src/travel.html
@@ -2,7 +2,7 @@
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "Travel"}'></include>
 
-<body class="page__body">
+<body class="page__body page__body--decor overlay" style="background-image: url('./images/hero/travel.jpg');">
   <div class="site-container">
     <include src="./html/_header.html" locals='{"page": "travel", "header": "header"}'></include>
 
