--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -9,14 +9,14 @@
       <a class="footer__link" href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>
       
         <ul class="footer__policy">
-          <li>
-            <a href="privacy-policy.html">
+          <li class="footer__item">
+            <a class="footer__link" href="privacy-policy.html">
               Privacy Policy
             </a>
           </li>
 
-          <li>
-            <a href="terms-of-use.html">
+          <li class="footer__item">
+            <a class="footer__link" href="terms-of-use.html">
               Terms of Use
             </a>
           </li>
