--- a/src/html/home/_hero.html
+++ b/src/html/home/_hero.html
@@ -1,24 +1,14 @@
-<section class="hero hero--home overlay">
-
+<section class="hero hero--home">
   <div class="hero__inner">
-
     <div class="container">
-
       <div class="hero__content">
-
-        <h1>
-          antarctica
-        </h1>
+        <h1>antarctica</h1>
 
         <p class="subtext">
-         Our exclusive expeditions offer unparalleled comfort and breathtaking experiences in the world’s last frontier.
+          Our exclusive expeditions offer unparalleled comfort and breathtaking
+          experiences in the world’s last frontier.
         </p>
-
       </div>
-
-
     </div>
-
   </div>
-
 </section>
