--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
-<include src="./html/_head.html" locals='{"title": "Privacy policy"}'></include>
+  <include
+    src="./html/_head.html"
+    locals='{"title": "Privacy policy"}'
+  ></include>
 
-<body class="page__body">
-  <div class="site-container">
-    <include src="./html/_header.html" locals='{"page": "", "header": "header header--colored"}'></include>
+  <body
+    class="page__body page__body--decor policy overlay"
+    style="background-image: url('./images/hero/policy.jpg')"
+  >
+    <div class="site-container">
+      <include
+        src="./html/_header.html"
+        locals='{"page": "", "header": "header header"}'
+      ></include>
 
-    <main class="main main--top">
+      <main class="main">
+        <section class="hero hero--policy">
+          <div class="hero__inner">
+            <div class="container">
+              <div class="hero__content">
+                <h1>Privacy Policy</h1>
+              </div>
+            </div>
+          </div>
+        </section>
 
-      <include src="./html/policy/_privacy-policy.html"></include>
-    </main>
+        <include src="./html/policy/_privacy-policy.html"></include>
+      </main>
 
-    <include src="./html/_footer.html"></include>
-
-  </div>
-</body>
-
+      <include src="./html/_footer.html"></include>
+    </div>
+  </body>
 </html>
