--- a/src/terms-of-use.html
+++ b/src/terms-of-use.html
@@ -2,11 +2,21 @@
 <html lang="en" class="page">
 <include src="./html/_head.html" locals='{"title": "Terms of use"}'></include>
 
-<body class="page__body">
+<body class="page__body page__body--decor policy overlay" style="background-image: url('./images/hero/terms.jpg')">
   <div class="site-container">
-    <include src="./html/_header.html" locals='{"page": "", "header": "header header--colored"}'></include>
+    <include src="./html/_header.html" locals='{"page": "", "header": "header header"}'></include>
 
-    <main class="main main--top">
+    <main class="main">
+
+      <section class="hero hero--policy">
+        <div class="hero__inner">
+          <div class="container">
+            <div class="hero__content">
+            <h1>Terms of Use</h1>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <include src="./html/policy/_terms-of-use.html"></include>
     </main>
