--- a/src/antartic.html
+++ b/src/antartic.html
@@ -11,7 +11,7 @@
     <main class="main">
       <section class="hero hero--articles">
         <div class="hero__inner">
-          <div class="conatiner">
+          <div class="container">
             <a class="btn btn--arrow" href="articles.html">Back</a>
 
             <div class="hero__content">
