--- a/src/articles.html
+++ b/src/articles.html
@@ -8,24 +8,16 @@
   "header": "header header--colored"}'></include>
 
     <main class="main main--top">
-
-      <section class="blog blog--main ">
-
+      <section class="blog blog--main">
         <div class="container">
-
-          <h2>
-            blogs
-          </h2>
+          <h2>blogs</h2>
 
           <ul class="blog__list">
-
             <li class="blog__item overlay overlay--gray">
               <img src="./images/blog/penguin.png" alt="10 Must-See Wildlife Encounters in Antarctica" width="455"
                 height="557" loading="lazy" />
 
-              <h3>
-                10 Must-See Wildlife Encounters in Antarctica
-              </h3>
+              <h3>10 Must-See Wildlife Encounters in Antarctica</h3>
 
               <a href="wildlife.html"></a>
             </li>
@@ -34,9 +26,7 @@
               <img src="./images/blog/iceberg.png" alt="Exploring the Historic Sites of the Antarctic Peninsula"
                 width="455" height="557" loading="lazy" />
 
-              <h3>
-                Exploring the Historic Sites of the Antarctic Peninsula
-              </h3>
+              <h3>Exploring the Historic Sites of the Antarctic Peninsula</h3>
               <a href="antartic.html"></a>
             </li>
 
@@ -54,24 +44,17 @@
               <img src="./images/hero/packing.jpg" alt="The Ultimate Packing List for Your Antarctic Expedition"
                 width="455" height="557" loading="lazy" />
 
-              <h3>
-                The Ultimate Packing List for Your Antarctic Expedition
-              </h3>
+              <h3>The Ultimate Packing List for Your Antarctic Expedition</h3>
               <a href="packing.html"></a>
             </li>
           </ul>
-
         </div>
-
       </section>
 
-
       <include src="./html/_contacts.html"></include>
-
     </main>
 
     <include src="./html/_footer.html"></include>
-
   </div>
 </body>
 
