--- a/src/html/about/_team.html
+++ b/src/html/about/_team.html
@@ -1,5 +1,4 @@
 <section class="team section">
-
   <div class="container">
     <h2>
       meet our team
@@ -10,12 +9,8 @@
         <img src="./images/team/emma.jpg" alt="Emma Johnson" width="427" height="494" loading="lazy" />
 
         <div class="team__desc">
-          <span>
-            Expedition Leader
-          </span>
-          <h3>
-            Emma Johnson
-          </h3>
+          <span> Expedition Leader </span>
+          <h3>Emma Johnson</h3>
         </div>
       </li>
 
@@ -23,12 +18,8 @@
         <img src="./images/team/michael.jpg" alt="Dr. Michael Harris" width="427" height="494" loading="lazy" />
 
         <div class="team__desc">
-          <span>
-            Marine Biologist
-          </span>
-          <h3>
-            Dr. Michael Harris
-          </h3>
+          <span> Marine Biologist </span>
+          <h3>Dr. Michael Harris</h3>
         </div>
       </li>
 
@@ -36,15 +27,10 @@
         <img src="./images/team/sarach.jpg" alt="Sarah Thompson" width="427" height="494" loading="lazy" />
 
         <div class="team__desc">
-          <span>
-          Environmental Scientist
-          </span>
-          <h3>
-            Sarah Thompson
-          </h3>
+          <span> Environmental Scientist </span>
+          <h3>Sarah Thompson</h3>
         </div>
       </li>
     </ul>
   </div>
-
 </section>
