--- a/src/html/home/_blog.html
+++ b/src/html/home/_blog.html
@@ -17,7 +17,7 @@
             10 Must-See Wildlife Encounters in Antarctica
           </h3>
 
-        <a href="#"></a>
+        <a href="wildlife.html"></a>
       </li>
 
       <li class="blog__item overlay overlay--gray">
@@ -27,7 +27,7 @@
           <h3>
            Exploring the Historic Sites of the Antarctic Peninsula
           </h3>
-        <a href="#"></a>
+        <a href="antartic.html"></a>
       </li>
     </ul>
 
