--- a/src/html/about/_faq.html
+++ b/src/html/about/_faq.html
@@ -1,7 +1,5 @@
 <section class="faq">
-
   <div class="container">
-
     <h2>
       faq
     </h2>
@@ -9,14 +7,13 @@
     <ul class="faq__list">
       <li class="faq__item">
         <details>
-          <summary>
-            What is included in the tour price?
-          </summary>
+          <summary>What is included in the tour price?</summary>
 
           <div>
             <p>
-              Our tour prices include accommodations, meals, guided excursions, and all necessary equipment.
-              International flights, travel insurance, and personal expenses are not included.
+              Our tour prices include accommodations, meals, guided excursions,
+              and all necessary equipment. International flights, travel
+              insurance, and personal expenses are not included.
             </p>
           </div>
         </details>
@@ -25,14 +22,16 @@
       <li class="faq__item">
         <details>
           <summary>
-            How should I prepare for the extreme weather conditions in Antarctica?
+            How should I prepare for the extreme weather conditions in
+            Antarctica?
           </summary>
 
           <div>
             <p>
-              We provide a detailed packing list to help you prepare. Essential items include layered clothing,
-              waterproof
-              outerwear, and sturdy boots. Our team is available to offer additional guidance on gear and preparation.
+              We provide a detailed packing list to help you prepare. Essential
+              items include layered clothing, waterproof outerwear, and sturdy
+              boots. Our team is available to offer additional guidance on gear
+              and preparation.
             </p>
           </div>
         </details>
@@ -40,21 +39,18 @@
 
       <li class="faq__item">
         <details>
-          <summary>
-            What safety measures are in place for the tours?
-          </summary>
+          <summary>What safety measures are in place for the tours?</summary>
 
           <div>
             <p>
-              Safety is our top priority. Our expeditions are led by experienced guides trained in first aid and
-              emergency
-              response. We also carry comprehensive medical kits and have protocols in place for various emergency
-              situations.
+              Safety is our top priority. Our expeditions are led by experienced
+              guides trained in first aid and emergency response. We also carry
+              comprehensive medical kits and have protocols in place for various
+              emergency situations.
             </p>
           </div>
         </details>
       </li>
     </ul>
-
   </div>
 </section>
