--- a/src/html/home/_discover.html
+++ b/src/html/home/_discover.html
@@ -1,9 +1,6 @@
 <section class="discover section">
-
   <div class="container">
-
     <ul class="discover__list">
-
       <li class="discover__item overlay overlay--gray">
         <img src="./images/discover/majestic.jpg" alt="Majestic Antarctic Voyage" width="427" height="494"
           loading="lazy" />
@@ -12,75 +9,54 @@
         </h3>
 
         <div class="discover__link">
-
           <div class="discover__content">
-            <span>
-              Majestic
-            </span>
+            <span> Majestic </span>
 
             <p>
               Ultimate journey.
             </p>
           </div>
 
-          <a href="#">Booking</a>
-
+          <a href="tours.html">Booking</a>
         </div>
       </li>
 
       <li class="discover__item overlay overlay--gray">
         <img src="./images/discover/luxury.jpg" alt="Luxury Polar Adventure" width="427" height="494" loading="lazy" />
-        <h3>
-          Luxury Polar Adventure
-        </h3>
+        <h3>Luxury Polar Adventure</h3>
         <div class="discover__link">
-
           <div class="discover__content">
-            <span>
-              Luxurious
-            </span>
+            <span>Luxurious</span>
 
-            <p>
-              Elegant escape.
-            </p>
+            <p>Elegant escape.</p>
           </div>
 
-          <a href="#">Booking</a>
-
+          <a href="tours.html">Booking</a>
         </div>
       </li>
 
       <li class="discover__item overlay overlay--gray">
         <img src="./images/discover/exclusive.jpg" alt="Exclusive Wildlife Expedition" width="427" height="494"
           loading="lazy" />
-        <h3>
-          Exclusive Wildlife Expedition
-        </h3>
+        <h3>Exclusive Wildlife Expedition</h3>
 
         <div class="discover__link">
           <div class="discover__content">
-            <span>
-              Wildlife
-            </span>
+            <span> Wildlife </span>
 
-            <p>
-              Wildlife tour.
-            </p>
+            <p>Wildlife tour.</p>
           </div>
 
-          <a href="#">Booking</a>
+          <a href="tours.html">Booking</a>
         </div>
       </li>
-
     </ul>
 
     <div class="discover__image overlay overlay--gray">
       <img src="./images/discover/discover.jpg" alt="Exclusive Wildlife Expedition" width="1320" height="280"
         loading="lazy" />
 
-      <a href="#">Discover more</a>
+      <a href="tours.html">Discover more</a>
     </div>
-
   </div>
-
 </section>
