--- a/src/html/policy/_terms-of-use.html
+++ b/src/html/policy/_terms-of-use.html
@@ -1,6 +1,6 @@
 <section class="policy section">
   <div class="container">
-    
+
     <div class="policy__inner">
       <div class="policy__content">
         <p>Updated 10 July, 2023</p>
@@ -41,7 +41,8 @@
           services. Subscribers are sent travel quote request alerts.
           They may also receive discounts and newsletter alerts. Message freq
           varies. Message and data rates may apply. You may opt-out at any time
-          by texting STOP. For help, text HELP or email at <a href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>
+          by texting STOP. For help, text HELP or email at <a
+            href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>
           Please,
           see our Privacy Policy <a href="https://antarcticluxuryexpeditions.com/privacy-policy">here</a>.
         </p>
@@ -141,7 +142,8 @@
           for more information regarding our information
           collection practices and safeguards, and how to opt not to receive
           such emails. Your use of the Site signifies your acknowledgement of
-          and agreement with our <a href="https://antarcticluxuryexpeditions.com/privacy-policy">Privacy Policy</a>, which is
+          and agreement with our <a href="https://antarcticluxuryexpeditions.com/privacy-policy">Privacy Policy</a>,
+          which is
           expressly
           incorporated into these Terms.
         </p>
@@ -733,7 +735,8 @@
           We welcome your comments, feedback, suggestions, and other
           communications regarding the Site and the information and services we
           make available through the Site (collectively, “Feedback”). Please
-          contact us with Feedback at <a href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>. Please
+          contact us with Feedback at <a
+            href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>. Please
           note our
           separate
           address for legal correspondence, above.
