--- a/src/html/_contacts.html
+++ b/src/html/_contacts.html
@@ -11,7 +11,7 @@
 
       <form class="contacts__form">
         <label for="userEmail">
-          <input type="email" placeholder="your email" id="useremail" required />
+          <input type="email" placeholder="your email" id="userEmail" required />
         </label>
 
         <button class="btn" type="submit">submit</button>
