--- a/src/html/policy/_terms-of-use.html
+++ b/src/html/policy/_terms-of-use.html
@@ -15,7 +15,7 @@
         <ul>
           <li>
             We take your privacy very seriously. See our
-            <a href="https://antarcticluxuryexpeditions.com/privacy-policy">Privacy Policy</a>.
+            <a href="https://antarcticluxuryexpeditions.com/privacy-policy">Privacy Policy.</a>
           </li>
           <li>
             By taking action to request information, accept terms, or submit
@@ -44,7 +44,7 @@
           by texting STOP. For help, text HELP or email at <a
             href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>
           Please,
-          see our Privacy Policy <a href="https://antarcticluxuryexpeditions.com/privacy-policy">here</a>.
+          see our Privacy Policy <a href="https://antarcticluxuryexpeditions.com/privacy-policy">here.</a>
         </p>
       </div>
 
@@ -142,7 +142,7 @@
           for more information regarding our information
           collection practices and safeguards, and how to opt not to receive
           such emails. Your use of the Site signifies your acknowledgement of
-          and agreement with our <a href="https://antarcticluxuryexpeditions.com/privacy-policy">Privacy Policy</a>,
+          and agreement with our <a href="https://antarcticluxuryexpeditions.com/privacy-policy">Privacy Policy,</a>
           which is
           expressly
           incorporated into these Terms.
@@ -736,7 +736,7 @@
           communications regarding the Site and the information and services we
           make available through the Site (collectively, “Feedback”). Please
           contact us with Feedback at <a
-            href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com</a>. Please
+            href="mailto:contact@antarcticluxuryexpeditions.com">contact@antarcticluxuryexpeditions.com.</a> Please
           note our
           separate
           address for legal correspondence, above.
